--- a/views/login.pug
+++ b/views/login.pug
@@ -21,6 +21,7 @@ html(lang="es")
             a(href="/register") Registrate
         p #{msj}
     script(src="/js/login.js")
+    script(src="/js/script.js")
     include footer.pug
 
 
