--- a/views/register.pug
+++ b/views/register.pug
@@ -23,4 +23,5 @@ html(lang="es")
       p ¿Ya estas registrado? -
         a(href="/login") Iniciar sesión
     script(src="/js/register.js")
+    script(src="/js/script.js")
     include footer.pug
