--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,3 +1,4 @@
-footer 
+footer.footer 
     h1 Esto es mi footer 
     p @copyright 2024 - Todos los derechos reservados
+script(src="/js/script.js")
