--- a/views/header.pug
+++ b/views/header.pug
@@ -1,9 +1,14 @@
 header
-    nav
-        ul
-            li
-                a(href="/") Home
-            li
-                a(href="/login") Log In
-            li
-                a(href="/register") Register
+    nav.navbar
+    #hamburger-menu.hamburger-menu
+        .bar
+        .bar
+        .bar
+    ul#nav-links.nav-links
+        li
+            a(href='/') Home
+        li
+            a(href='/login') LogIn
+        li
+            a(href='/register') Register
+script(src="/js/script.js")
