--- a/views/login.pug
+++ b/views/login.pug
@@ -16,6 +16,9 @@ html(lang="es")
           label(for="password")
           input#password(type="password", name="password", placeholder="Contraseña de usuario")
           button(type="submit") Iniciar sesión
+          .container
+          button.google-button
+            img(src='https://banner2.cleanpng.com/20180416/xlq/kisspng-g-suite-pearl-river-middle-school-google-software-sign-up-button-5ad4e1a9d11d62.1599053415239008418566.jpg', alt='Google logo')
           p.error.hidden Error al iniciar sesión
         p ¿Aún no te registraste? -
             a(href="/register") Registrate
