--- a/views/header.pug
+++ b/views/header.pug
@@ -1,14 +1,9 @@
 header
-    nav.navbar
-    #hamburger-menu.hamburger-menu
-        .bar
-        .bar
-        .bar
-    ul#nav-links.nav-links
-        li
-            a(href='/') Home
-        li
-            a(href='/login') LogIn
-        li
-            a(href='/register') Register
-script(src="/js/script.js")
+    nav
+        ul
+            li
+                a(href="/") Home
+            li
+                a(href="/login") Log In
+            li
+                a(href="/register") Register
