--- a/views/register.pug
+++ b/views/register.pug
@@ -19,6 +19,8 @@ html(lang="es")
         label(for="password") Contraseña
         input#password(type="password", name="password", placeholder="Contraseña", required)
         button(type="submit") Registrarse
+        button.google-button
+          img(src='https://banner2.cleanpng.com/20180416/xlq/kisspng-g-suite-pearl-river-middle-school-google-software-sign-up-button-5ad4e1a9d11d62.1599053415239008418566.jpg', alt='Google logo')
         p.error.hidden Error al registrarse
       p ¿Ya estás registrado? - 
         a(href="/login") Iniciar sesión
