create y validate users en SQL OK

--- a/views/header.pug
+++ b/views/header.pug
@@ -7,3 +7,5 @@ header
                 a(href="/login") Log In
             li
                 a(href="/register") Register
+            li  
+                a(href="/" class="btnCerrarSesion") Log Out
