--- a/views/login.pug
+++ b/views/login.pug
@@ -7,20 +7,19 @@ html(lang="es")
     link(rel="stylesheet", href="/css/style.css")
   body
     include header.pug
-    main
-      .form-container
+    main.form-container
         h1 Iniciar sesión
-        form#login-form
+        form#login-form(action="api/login/user", method="POST")
           label(for="email")
           input#email(type="email", name="email", placeholder="Email de usuario")
           label(for="password")
-          input#password(type="password", name="password", placeholder="Contraseña de usuario")
+          input#password(type="password", name="password_hash", placeholder="Contraseña de usuario")
           button(type="submit") Iniciar sesión
           p.error.hidden Error al iniciar sesión
         p ¿Aún no te registraste? -
             a(href="/register") Registrate
         p #{msj}
-    script(src="/js/login.js")
+  <!--script(src="/js/login.js")-->
     script(src="/js/script.js")
     include footer.pug
 
