--- a/views/header.pug
+++ b/views/header.pug
@@ -9,3 +9,9 @@ header
                 a(href="/register") Register
             li  
                 a(href="/" class="btnCerrarSesion") Log Out
+            li  
+                a(href="/dashboard") DashBoard
+            li  
+                a(href="/users") Users
+            li  
+                a(href="/profile") Profile
