fixes y vista UsersForAdmin

--- a/views/header.pug
+++ b/views/header.pug
@@ -10,6 +10,8 @@ header
             li  
                 a(href="/" class="btnCerrarSesion") Log Out
             li  
+                a(href="/favorites") Favorites
+            li  
                 a(href="/dashboard") DashBoard
             li  
                 a(href="/users") Users
