--- a/views/header.pug
+++ b/views/header.pug
@@ -4,16 +4,16 @@ header
             li
                 a(href="/") Home
             li
-                a(href="/login") Log In
+                a(href="/login" class="viewButton") Log In
             li
-                a(href="/register") Register
+                a(href="/register" class="viewButton") Register
             li  
-                a(href="/" class="btnCerrarSesion") Log Out
+                a(href="/" class="btnCerrarSesion hide-buttons ") Log Out
             li  
-                a(href="/favorites") Favorites
+                a(href="/favorites" class="hide-buttons") Favorites
             li  
-                a(href="/dashboard") DashBoard
+                a(href="/dashboard" class="hide-buttons") DashBoard
             li  
-                a(href="/users") Users
+                a(href="/users" class="hide-buttons") Users
             li  
-                a(href="/profile") Profile
+                a(href="/profile" class="hide-buttons") Profile
