--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -9,13 +9,13 @@ html
     include header.pug
     main 
       section
-        form#createEvent
+        form#createEvent(action="api/events", method="POST")
           input(type='text', name='event_name', placeholder='Nombre del Evento')
           input(type='text', name='description', placeholder='Descripcion')
           input(type='text', name='date_start', placeholder='Fecha de Inicio')
           input(type='text', name='date_end', placeholder='Fecha de Fin')
+          input(type='text', name='url', placeholder='Url Web')
           input(type='text', name='poster', placeholder='Url Imagen')
-          input(type='url', name='url', placeholder='Url Web')
           input(type='submit')
 
       section#searched_container
@@ -28,5 +28,6 @@ html
               a.button(href=event.url target="_blank") Enlace    
               img(src=event.poster, alt=event.event_name, width="300")
     include footer.pug
+    script(src="/js/dashboard.js")
     script(src="/js/script.js")
     
