--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ html(lang="es")
       title Future Fests
       link(rel="stylesheet", href="/css/style.css")
    body
-        include header.pug
+        != header
         main
             h1 Future Fests
             section
