CSS y fixes varios

--- a/views/favorites.pug
+++ b/views/favorites.pug
@@ -12,12 +12,12 @@ html(lang="es")
             section#all_events_container
                 each result in results
                     article
-                        button.buttonDeleteFavorite(id=`${result.event_name}`) Eliminar
+                        button.buttonDeleteFavorite(id=${result.event_name}) Eliminar
                         p Evento: #{result.event_name}
                         p Descripción: #{result.description}
                         -const fecha = new Date (result.date_start)
                         p Fecha inicio: #{fecha.toDateString()}
-                        a.button(href=result.url target="_blank") Enlace    
-                        img(src=result.poster, alt=result.event_name width="300")
+                        a.button(href=result.url target="_blank") Enlace
+                        img(src=result.poster, alt=result.event_name width="200")
         include footer.pug
         script(src="/js/favorites.js")
