--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,3 +1,12 @@
-footer 
-    h1 Esto es mi footer 
-    p @copyright 2024 - Todos los derechos reservados
+footer
+  .footer-content
+    p © 2024 - Todos los derechos reservados
+    .social-icons
+      a(href="https://twitter.com/", target="_blank")
+        i.fa.fa-twitter
+      a(href="https://facebook.com/", target="_blank")
+        i.fa.fa-facebook
+      a(href="https://instagram.com/", target="_blank")
+        i.fa.fa-instagram
+      a(href="https://linkedin.com/", target="_blank")
+        i.fa.fa-linkedin
