botón de scrapping

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,6 +17,7 @@ html
             input(type='text', name='url', placeholder='Url Web')
             input(type='text', name='poster', placeholder='Url Imagen')
             input(type='submit')
+          button.buttonScrap Scrap!
 
         section#searched_container
           section#all_events_container
