--- a/views/header.pug
+++ b/views/header.pug
@@ -1,5 +1,9 @@
 header
     nav
+        .hamburger
+            div.bar1
+            div.bar2
+            div.bar3
         if !isAuthenticated
             ul
                 li
